--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,9 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
-    implementation 'androidx.biometric:biometric:1.0.1' //지문인식
+    implementation 'com.google.android.material:material:1.0.0-rc01' // 구글 머터리얼 디자인
+
+   implementation 'androidx.biometric:biometric:1.0.1' //지문인식
     implementation 'com.journeyapps:zxing-android-embedded:3.6.0' //qr코드
     implementation 'com.android.volley:volley:1.1.0'
     implementation 'com.google.code.gson:gson:2.8.5'
