--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,10 +10,12 @@ android {
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
-
+        vectorDrawables.useSupportLibrary = true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
-
+    dataBinding {
+        enabled = true
+    }
     buildTypes {
         release {
             minifyEnabled false
@@ -35,8 +37,16 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     implementation 'com.google.android.material:material:1.0.0-rc01' // 구글 머터리얼 디자인
+    // 캘린더 관련
+        implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
+        implementation 'androidx.recyclerview:recyclerview:1.1.0'
+        implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
+        implementation "androidx.lifecycle:lifecycle-viewmodel:2.2.0"
+        androidTestImplementation 'androidx.test:runner:1.2.0'
+        androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    // 캘린더 관련
 
-   implementation 'androidx.biometric:biometric:1.0.1' //지문인식
+    implementation 'androidx.biometric:biometric:1.0.1' //지문인식
     implementation 'com.journeyapps:zxing-android-embedded:3.6.0' //qr코드
     implementation 'com.android.volley:volley:1.1.0'
     implementation 'com.google.code.gson:gson:2.8.5'
